--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $main-blue: #3498db;
 $main-red: #e74c3c;
 $main-green: #2ecc71;
 $main-white: #ecf0f1;
+$main-grey: #bdc3c7;
 $main-black: #2c3e50;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
