--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -140,3 +140,31 @@ div:focus {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.el-select {
+  width: 100%;
+}
+
+.avatar-uploader .el-upload {
+  border: 1px dashed #d9d9d9;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+  border-color: #409eff;
+}
+.avatar-uploader-icon {
+  font-size: 28px;
+  color: #8c939d;
+  width: 8.75rem;
+  height: 8.75rem;
+  line-height: 8.75rem;
+  text-align: center;
+}
+.avatar {
+  width: 8.75rem;
+  height: 8.75rem;
+  display: block;
+}
