--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,11 +12,20 @@ $subMenuHover: #001528;
 $sideBarWidth: 210px;
 
 $main-blue: #3498db;
+$main-blue-dark: #3081b8;
 $main-red: #e74c3c;
+$main-red-dark: #c53e30;
+$main-orange: #e67e22;
+$main-orange-dark: #d35400;
 $main-green: #2ecc71;
-$main-white: #ecf0f1;
+$main-green-dark: #25ad5e;
+$main-white: #fff;
+$main-white-dark: #ecf0f1;
 $main-grey: #bdc3c7;
+$main-grey-dark: #8a8d8f;
 $main-black: #2c3e50;
+$main-black-dark: #040507;
+
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
