--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -26,3 +26,23 @@
   width: 100%;
   height: 100%;
 }
+
+@mixin base_layout {
+  padding: 1.25rem 0;
+}
+
+@mixin box_shadow($color: #0002) {
+  box-shadow: 1px 2px 2px 2px $color;
+}
+
+@mixin icons {
+  display: flex;
+  & > div {
+    color: #a0a0a0;
+    margin-right: 10px;
+    font-size: 0.875rem;
+  }
+  .fa {
+    margin-right: 0.2rem;
+  }
+}
