--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -252,3 +252,15 @@ div:focus {
     }
   }
 }
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+}
+
+// .v-modal {
+//   z-index: 99998 !important;
+// }
+// .el-dialog__wrapper {
+//   z-index: 99999 !important;
+// }
