--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -264,3 +264,13 @@ div:focus {
 // .el-dialog__wrapper {
 //   z-index: 99999 !important;
 // }
+
+.w-e-toolbar {
+  z-index: 2 !important;
+}
+.w-e-menu {
+  z-index: 2 !important;
+}
+.w-e-text-container {
+  z-index: 1 !important;
+}
